# libsat

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake
include/libsat/: component.h  function_decl.h  libsat.h  libsat_fwd.h  macro_tricks.h  parser.h  scanner.h  status.h
include/libsat/status/: base.h  parser.h
src/: stub.c
src/base/: intern_entry_create.c  intern_entry_resource_release.c  intern_to_string_tree_compare.c  intern_to_string_tree_key.c  libsat_base_internal.h  libsat_context_create.c  libsat_context_resource_handle.c  libsat_context_resource_release.c  libsat_context_variable_get.c  string_to_intern_tree_compare.c  string_to_intern_tree_key.c
src/parser/: libsat_ast_list_node_push.c  libsat_ast_node_create_as_assignment.c  libsat_ast_node_create_as_biconditional.c  libsat_ast_node_create_as_conjunction.c  libsat_ast_node_create_as_disjunction.c  libsat_ast_node_create_as_exclusive_disjunction.c  libsat_ast_node_create_as_implication.c  libsat_ast_node_create_as_list.c  libsat_ast_node_create_as_negation.c  libsat_ast_node_create_as_statement.c  libsat_ast_node_create_from_boolean_literal.c  libsat_ast_node_create_from_variable.c  libsat_ast_node_resource_handle.c  libsat_ast_node_resource_release.c  libsat_parse.c  parser_internal.h  should_combine_left.c
src/scanner/: libsat_scanner_create.c  libsat_scanner_peek_token.c  libsat_scanner_read_token.c  libsat_scanner_resource_handle.c  libsat_scanner_resource_release.c  scanner_internal.h
test/: stub.cpp
test/base/: test_libsat_context_variable_get.cpp
test/parser/: test_libsat_parse.cpp
test/scanner/: test_libsat_scanner_read_token.cpp
